--- a/src/ModalLauncher.css
+++ b/src/ModalLauncher.css
@@ -1,6 +1,6 @@
 .modal-button {
   padding: 10px;  
-  background-color: #068db2;
+  background-image: url(./image.png);
   border: 0;
   border-radius: 0.3rem;
   font-size: 1rem;
@@ -9,7 +9,6 @@
   margin-bottom: 0.8rem;
 }
 
-.modal-button:hover {
-  background-color: #466d87;
+.modal-launcher:hover {
 }
   
