--- a/src/components/modal/ModalLauncher.css
+++ b/src/components/modal/ModalLauncher.css
@@ -1,14 +1,11 @@
 .modal-button {
   padding: 10px;  
-  background-image: url(./image.png);
+  background-image: url(../../assets/image.png);
   border: 0;
   border-radius: 0.3rem;
   font-size: 1rem;
   color: #fff;
   cursor: pointer;
   margin-bottom: 0.8rem;
-}
-
-.modal-launcher:hover {
 }
   
